// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation creates correct snapshot for confirmation dialog 1`] = `
<div
  aria-labelledby="mui-1"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthMd css-rx25b2-MuiPaper-root-MuiDialog-paper"
  role="dialog"
>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-xq3hxg-MuiTypography-root-MuiDialogTitle-root"
    id="mui-1"
  >
    Title
  </h2>
  <div
    class="MuiDialogContent-root css-ypiqx9-MuiDialogContent-root"
  >
    <p
      class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1k6zr5f-MuiTypography-root-MuiDialogContentText-root"
    >
      Body
    </p>
  </div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-hlj6pa-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium IconButton-button-1 css-4dagr2-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Cancel
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium IconButton-icon-3 css-kp9ftd-MuiIcon-root"
      >
        clear
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium IconButton-buttonDanger-2 css-4dagr2-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Confirm Deletion
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium IconButton-icon-3 css-kp9ftd-MuiIcon-root"
      >
        delete
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Confirmation creates correct snapshot for confirmation dialog with array in body 1`] = `
<div
  aria-labelledby="mui-2"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthMd css-rx25b2-MuiPaper-root-MuiDialog-paper"
  role="dialog"
>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-xq3hxg-MuiTypography-root-MuiDialogTitle-root"
    id="mui-2"
  >
    Title
  </h2>
  <div
    class="MuiDialogContent-root css-ypiqx9-MuiDialogContent-root"
  >
    <p
      class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1k6zr5f-MuiTypography-root-MuiDialogContentText-root"
    >
      Body
    </p>
    <p
      class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1k6zr5f-MuiTypography-root-MuiDialogContentText-root"
    >
      Next line
    </p>
    <p
      class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1k6zr5f-MuiTypography-root-MuiDialogContentText-root"
    >
      Final line
    </p>
  </div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-hlj6pa-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium IconButton-button-4 css-4dagr2-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Cancel
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium IconButton-icon-6 css-kp9ftd-MuiIcon-root"
      >
        clear
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium IconButton-buttonDanger-5 css-4dagr2-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Confirm Deletion
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium IconButton-icon-6 css-kp9ftd-MuiIcon-root"
      >
        delete
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
